kustomize/plane-ingress/plane-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plane-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: plane.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plane-app-web
                port:
                  number: 3000
          - path: /spaces/
            pathType: Prefix
            backend:
              service:
                name: plane-app-space
                port:
                  number: 3000
          - path: /god-mode/
            pathType: Prefix
            backend:
              service:
                name: plane-app-admin
                port:
                  number: 3000
          - path: /live/
            pathType: Prefix
            backend:
              service:
                name: plane-app-live
                port:
                  number: 3000
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: plane-app-api
                port:
                  number: 8000
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: plane-app-api
                port:
                  number: 8000
          - path: /uploads/
            pathType: Prefix
            backend:
              service:
                name: plane-app-minio
                port:
                  number: 9000

    - host: plane-minio.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plane-app-minio
                port:
                  number: 9090
